# sfml_sandbox

./: .editorconfig  CMakeLists.txt  LICENSE  README.md  setup.sh
resources/GameOfLife/: glider_gun.yaml  pulsar.yaml
resources/Pathfinding/: four_boxes.yaml
src/: CliConfig.hpp  EventTypes.hpp  Str.hpp  main.cpp
src/AI/Tutorials/: tensors.py
src/Ants/: AntSimGameMode.cpp  AntSimGameMode.hpp
src/GameMode/: Console.cpp  Console.hpp  ConsoleEvents.hpp  DebugEvents.hpp  GameEvents.hpp  GameMode.cpp  GameMode.hpp  GameModeController.cpp  GameModeController.hpp  GameModeSelect.cpp  GameModeSelect.hpp
src/GameOfLife/: EventTypes.hpp  GameOfLife.cpp  GameOfLife.hpp  GameOfLifeGameMode.cpp  GameOfLifeGameMode.hpp  GameOfLifeWorker.cpp  GameOfLifeWorker.hpp  GameOfLifeWorkerPool.hpp
src/Games/Ants/: AntSimGameMode.cpp  AntSimGameMode.hpp  Ants.cpp  Ants.hpp
src/Games/Boids/: BoidManager.cpp  BoidManager.hpp  BoidPhysics.hpp  Boids.cpp  Boids.hpp
src/Games/GameOfLife/: GameEvents.hpp  GameOfLife.cpp  GameOfLife.hpp  GameOfLifeWorker.cpp  GameOfLifeWorker.hpp
src/Games/Orbito/: Orbito.cpp  Orbito.hpp
src/Games/Pathfinding/: Agent.cpp  Agent.hpp  BoidPhysics.hpp  Boids.cpp  Boids.hpp  Grid.cpp  Grid.hpp  Obstacle.cpp  Obstacle.hpp  PathGraph.cpp  PathGraph.hpp  Pathfinding.cpp  Pathfinding.hpp  RayPath.cpp  RayPath.hpp
src/Games/QuadTest/: QuadTest.cpp  QuadTest.hpp
src/Orbito/: Orbito.cpp  Orbito.hpp
src/QuadTest/: QuadTest.cpp  QuadTest.hpp  QuadTestGameMode.cpp  QuadTestGameMode.hpp
src/UI/: CellGrid.cpp  CellGrid.hpp  DebugDraw.cpp  DebugDraw.hpp  HoverInfo.cpp  HoverInfo.hpp
src/Utils/: CliConfig.hpp  Logging.cpp  Logging.hpp  MathUtils.hpp  Platform.hpp  Str.hpp  ThreadWorker.cpp  ThreadWorker.hpp  Timer.cpp  Timer.hpp  VectorUtils.hpp  Yaml.hpp
src/Utils/EventSystem/: ADelegate.hpp  Delegate.hpp  Event.cpp  Event.hpp  EventBase.cpp  EventBase.hpp  EventComponent.cpp  EventComponent.hpp  EventListener.hpp  EventSystem.hpp  GDelegate.hpp  TDelegate.hpp  VDelegate.hpp
src/Utils/GameMode/: GameMode.cpp  GameMode.hpp  GameModeController.cpp  GameModeController.hpp
src/Utils/UI/: CellGrid.cpp
test/src/: EventComponentTest.cpp  TimerTest.cpp  main_testall.cpp
test/src/EventSystem/: DelegateTest.cpp  EventTypes.hpp  Events.hpp  EventsTest.hpp  Events_DelegateTest.cpp  Events_ProcessDataListenerTest.cpp  Events_SimpleListenerTest.cpp  Events_ThreadEventListenerTest.cpp  ProcessDataListener.hpp  ProcessDataListenerTest.cpp  SimpleListener.hpp  SimpleListenerTest.cpp  SingleThreadEventComponent.hpp  SingleThreadEventComponentTest.cpp  TestEvents.hpp  TestType.hpp  ThreadEventComponent.hpp  ThreadEventComponentTest.cpp  ThreadEventListener.hpp  ThreadEventListenerTest.cpp
test/src/Timer/: TimerTest.cpp
test/src/Utils/: EnvironmentTest.cpp  UtilsTest.cpp  VectorUtilsTest.cpp
